Strip ticket noise and tighten comment tone across the tree.
Drop JK-/ticket- ids and chatty narrative from source comments, scripts,
and build wiring so the codebase reads as product code. Leave product docs
intact after an over-aggressive strip mangled markdown tables and headings.